# pyrsdr

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: colab_demo.py
pyrsdr/: __init__.py  cv.py  rsdr.py  sir.py  utils.py
tests/: conftest.py  test_cv.py  test_rsdr.py  test_sir.py  test_utils.py
