[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrsdr"
version = "0.1.0"
description = "JAX-accelerated Sufficient Dimension Reduction (RSDR, SIR)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Zuchen Li"},
]
keywords = ["dimension-reduction", "sufficient-dimension-reduction", "jax", "SIR", "distance-covariance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.4.20",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Repository = "https://github.com/Links2568/pyrsdr"

[tool.setuptools.packages.find]
include = ["pyrsdr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "reference: tests requiring external reference data in test_data/",
]
